# apme

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  REMEDIATION-abbenay-update.md  SDLC-FRAMEWORK.md  VENDORED.md  action.yml  compose.yaml  pyproject.toml
.claude/skills/: README.md
.github/instructions/: *.instructions.md
.github/workflows/: deprecation-scrape.yml  prek.yml  release.yml  test.yml
.sdlc/: README.md
.sdlc/adrs/: ADR-004-podman-pod-deployment.md  ADR-005-no-service-discovery.md  ADR-006-ephemeral-venvs.md  ADR-007-async-grpc-servers.md  ADR-012-scale-pods-not-services.md  ADR-013-structured-diagnostics.md  ADR-014-cli-output-formats.md  ADR-018-mypy-strict-type-checking.md  ADR-019-dependency-governance.md  ADR-022-session-scoped-venvs.md  ADR-023-per-finding-classification.md  ADR-024-thin-cli-daemon-mode.md  README.md  (+17 more)
docs/: ADR.md  ARCHITECTURE.md  DATA_FLOW.md  DEPLOYMENT.md  DESIGN_AI_ESCALATION.md  DESIGN_DASHBOARD.md  DESIGN_REMEDIATION.md  DESIGN_VALIDATORS.md  DEVELOPMENT.md  RULE_CATALOG.md
examples/: README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: ai-prompt-test.py  generate_rule_catalog.py  ws-diag.py
tests/: conftest.py  rule_doc_integration_test.py  rule_doc_parser.py  test_L039_undefined_variable_graph.py  test_L050_var_naming_graph.py  test_ai_escalation.py  test_ansi.py  test_ansible_cache.py  test_cli.py  test_cli_health_and_diagnostics.py  test_collection_cache_venv_builder.py  test_collection_downloader.py  test_content_graph.py  test_engine_model_loader.py  test_engine_models.py  test_engine_scanner.py  test_engine_utils.py  test_event_emitter.py  test_formatter.py  test_formatter_cli.py  test_galaxy_proxy_server.py  test_gateway_db.py  test_gateway_notifications.py  test_gateway_projects.py  test_gateway_scan.py  test_gateway_servicer.py  test_gitleaks_scanner.py  test_graph_opa_payload.py  test_graph_remediation.py  test_graph_scanner.py  test_inherited_property_graph_rules_a.py  test_inherited_property_graph_rules_b.py  test_list_ai_models.py  test_module_options_graph_rules.py  test_node_state.py  test_opa_client.py  test_project_root.py  test_r108_graph.py  test_remaining_graph_rules.py  test_remediation.py  (+19 more)
tools/: generate_rule_catalog.py
(+692 files in other folders)
