[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apme-engine"
version = "0.1.0"
description = "Ansible quality/modernization engine: ARI-based scanner + OPA rules"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "setuptools",
    "jsonpickle",
    "PyYAML",
    "ruamel.yaml",
    "tabulate",
    "filelock",
    "rapidfuzz",
    "requests",
    "joblib",
    "gitdb",
    "smmap",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mock", "pytest-asyncio>=0.24", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/apme_engine/validators/native/rules"]
pythonpath = ["src"]
addopts = "-v --tb=short -m 'not integration'"
markers = ["integration: marks tests as integration (may use network or external deps)"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/apme_engine"]
omit = ["*/tests/*", "*/__pycache__/*", "*/rules/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
show_missing = true
fail_under = 95

[project.scripts]
apme-scan = "apme_engine.cli:main"
apme-primary = "apme_engine.daemon.primary_main:main"
apme-cache-maintainer = "apme_engine.daemon.cache_maintainer_main:main"
apme-ansible-validator = "apme_engine.daemon.ansible_validator_main:main"
apme-native-validator = "apme_engine.daemon.native_validator_main:main"
apme-opa-validator = "apme_engine.daemon.opa_validator_main:main"
apme-gitleaks-validator = "apme_engine.daemon.gitleaks_validator_main:main"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["src/apme/v1/*_pb2*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/apme_engine/engine/annotators/ansible.builtin/*.py" = ["E501"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"apme_engine.engine" = ["*.txt", "*.json"]
"apme_engine.engine.annotators" = ["ansible.builtin/*.py"]
